force-app/main/default/objects/OpportunityTeamMember/fields/CargoTexto__c.field-meta.xml
<CustomField>
    <fullName>CargoTexto__c</fullName>
    <formula>TEXT(TeamMemberRole)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cargo Texto</label>
    <type>Text</type>
</CustomField>