force-app/main/default/objects/OpportunityTeamMember/fields/ComissionPercentage__c.field-meta.xml
<CustomField>
    <fullName>ComissionPercentage__c</fullName>
    <label>Porcentagem da Comissão</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>