force-app/main/default/objects/OpportunityTeamMember/fields/ComissionValue__c.field-meta.xml
<CustomField>
    <fullName>ComissionValue__c</fullName>
    <formula>Opportunity.DiscountedValue__c * ComissionPercentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor da Comissão</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>