force-app/main/default/objects/OpportunityTeamMember/fields/ValorDaComissao__c.field-meta.xml
<CustomField>
    <fullName>ValorDaComissao__c</fullName>
    <label>Valor da Comissão</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>